--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shaper",
+  "name": "@julienbonteweb/shaper",
   "version": "0.1.0",
   "description": "test",
   "main": "lib/commonjs/index",
