feat(init): still trying to init web

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "shaper": ["./src/index"]
+      "@julienbonteweb/shaper": ["./src/index"]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
