--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": " NODE_OPTIONS=--openssl-legacy-provider expo start --web"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.3",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
+    "@types/react": "~18.0.24",
     "babel-plugin-module-resolver": "^4.1.0"
   },
   "private": true
