--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
+    "@babel/core": "^7.20.5",
     "@commitlint/config-conventional": "^17.0.2",
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^28.1.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.70.0",
+    "babel-loader": "^8.3.0",
     "commitlint": "^17.0.2",
     "del-cli": "^5.0.0",
     "eslint": "^8.4.1",
