--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "@julienbonteweb/shaper",
   "version": "0.3.1",
   "description": "test",
-  "main": "lib/commonjs/index",
-  "module": "lib/module/index",
-  "types": "lib/typescript/index.d.ts",
-  "react-native": "src/index",
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "types": "lib/typescript/src/index.d.ts",
+  "react-native": "src/index.tsx",
   "source": "src/index",
   "files": [
     "src",
     "lib",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__",
     "android",
     "ios",
     "cpp",
@@ -21,9 +24,6 @@
     "!android/gradlew",
     "!android/gradlew.bat",
     "!android/local.properties",
-    "!**/__tests__",
-    "!**/__fixtures__",
-    "!**/__mocks__",
     "!**/.*"
   ],
   "scripts": {
@@ -33,7 +33,8 @@
     "prepare": "bob build",
     "release": "release-it",
     "example": "yarn --cwd example",
-    "bootstrap": "yarn example && yarn install"
+    "bootstrap": "yarn example && yarn install",
+    "prepack": "bob build"
   },
   "keywords": [
     "react-native",
@@ -71,7 +72,7 @@
     "prettier": "^2.0.5",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-builder-bob": "^0.20.0",
+    "react-native-builder-bob": "^0.20.3",
     "release-it": "^15.0.0",
     "typescript": "^4.5.2"
   },
@@ -151,12 +152,7 @@
     "targets": [
       "commonjs",
       "module",
-      [
-        "typescript",
-        {
-          "project": "tsconfig.build.json"
-        }
-      ]
+      "typescript"
     ]
   }
 }
