--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/jest": "^28.1.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.70.0",
+    "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.3.0",
     "commitlint": "^17.0.2",
     "del-cli": "^5.0.0",
@@ -74,6 +75,7 @@
     "react-native": "0.70.5",
     "react-native-builder-bob": "^0.20.3",
     "release-it": "^15.0.0",
+    "styled-components": "^5.3.6",
     "typescript": "^4.5.2"
   },
   "resolutions": {
