fix(ts): tsconfig back to normal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,6 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "esnext",
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "noEmit": true
+    "target": "esnext"
   }
 }
