--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@julienbonteweb/shaper",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "test",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
@@ -158,6 +158,5 @@
       "typescript"
     ]
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
