--- a/package.json
+++ b/package.json
@@ -54,30 +54,31 @@
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
-    "@babel/core": "^7.20.5",
-    "@commitlint/config-conventional": "^17.0.2",
-    "@react-native-community/eslint-config": "^3.0.2",
-    "@release-it/conventional-changelog": "^5.0.0",
-    "@types/jest": "^28.1.2",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "0.70.0",
+    "@babel/core": "^7.20.7",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@release-it/conventional-changelog": "^5.1.1",
+    "@types/chance": "^1.1.3",
+    "@types/jest": "^29.2.5",
+    "@types/react": "~18.0.26",
+    "@types/react-native": "0.70.8",
     "@types/styled-components": "^5.1.26",
-    "babel-loader": "^8.3.0",
-    "commitlint": "^17.0.2",
+    "babel-loader": "^9.1.0",
+    "commitlint": "^17.3.0",
     "del-cli": "^5.0.0",
-    "eslint": "^8.4.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^28.1.1",
-    "pod-install": "^0.1.0",
-    "prettier": "^2.0.5",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
+    "pod-install": "^0.1.38",
+    "prettier": "^2.8.1",
+    "react": "18.2.0",
+    "react-native": "0.70.6",
     "react-native-builder-bob": "^0.20.3",
-    "release-it": "^15.0.0",
+    "react-native-svg": "^13.6.0",
+    "release-it": "^15.6.0",
     "styled-components": "^5.3.6",
-    "typescript": "^4.5.2",
-    "react-native-svg": "^13.6.0"
+    "typescript": "^4.9.4"
   },
   "resolutions": {
     "@types/react": "17.0.21"
@@ -158,5 +159,7 @@
       "typescript"
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "chance": "^1.1.9"
+  }
 }
